--- a/OOAD_Project/program.html
+++ b/OOAD_Project/program.html
@@ -1,6 +1,12 @@
 <HTML>
 <BODY>
-	<table style="width:100%">
+	<hr>   <img src="image.jpg" alt="Your face" width="42" height="42">
+	<ul>
+		<li style = "float:left"><a href="#home">Home</a></li>
+		<li style = "float:left"><a href="#news">News</a></li>
+		<li style = "float:left"><a href="#contact">Contact</a></li>
+		<li style = "float:left"><a href="#about">About</a></li>
+	</ul>	<table style="width:100%">
 		<tr>
 		<th style="border:1px solid black">Person 1</th>
 		<th style="border:1px solid black">Person 2</th>
@@ -16,13 +22,6 @@
 		<td style="border:1px solid black">14</td>
 		<td style="border:1px solid black">12</td>
 		</tr>
-		</table>
-	<label for="cars">Choose an option:</label>
-		<select>
-		<option value="option1">Option A</option>
-		<option value="option2">Option B</option>
-		<option value="option3">Option C</option>
-		<option value="option4">Option D</option>
-		</select>
+		</table>)
 </BODY>
 </HTML>
