--- a/OOAD_Project/program.html
+++ b/OOAD_Project/program.html
@@ -1,6 +1,8 @@
 <HTML>
 <BODY>
-	<hr>   <img src="image.jpg" alt="Your face" width="42" height="42">
+	<p>lorem*15</p>
+	<hr>	<a>Thisishyperlink.com</a>
+   <img src="image.jpg" alt="Your face" width="42" height="42">
 	<ul>
 		<li style = "float:left"><a href="#home">Home</a></li>
 		<li style = "float:left"><a href="#news">News</a></li>
