--- a/ui/fullpage.html
+++ b/ui/fullpage.html
@@ -22,7 +22,7 @@
     <div id="fullpage">
         <section class="section s1">
             <h1>&#60;CODEnator&#62;</h1>
-            <p>Convert Image to HTML Code</p>
+            <p>Your Friendly Frontend Co-ordinator</p>
         </section>
     
         <section class="section s2"> 
@@ -42,7 +42,7 @@
                             <a href="http://127.0.0.1:8000/store/"></a>
                         </button>
                     </li> -->
-                        <li><button type="button" class="btn btn-outline-secondary">Download</button> the HTML code.</li>
+                        <!-- <li><button type="button" class="btn btn-outline-secondary">Download</button> the HTML code.</li> -->
                     </ul>
                     </div>
                 <div class="image"><img src="img.png" alt="ml"></div>
